--- a/index.html
+++ b/index.html
@@ -158,6 +158,15 @@
     li:hover > ul {
       display: block;
     }
+    @media (max-width: 768px) {
+  nav ul {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+  }
+}
+
   </style>
 </head>
 <body>
@@ -726,3 +735,4 @@ function submitBooking(event) {
 
 </body>
 </html>
+
