--- a/index.html
+++ b/index.html
@@ -1,6 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  
+  <!-- SEO Meta Tags -->
+  <title>Celebrity Meet & Greet Tickets - Meet The Stars</title>
+  <meta name="description" content="Exclusive celebrity meet & greet tickets. Connect with your favorite stars today! Limited spots available.">
+  <meta name="keywords" content="celebrity meet and greet, meet celebrities, VIP tickets, celebrity events">
+  
+  <!-- Open Graph (for Facebook/WhatsApp/TikTok sharing) -->
+  <meta property="og:title" content="Celebrity Meet & Greet Tickets">
+  <meta property="og:description" content="Secure your chance to meet top celebrities. Don’t miss out!">
+  <meta property="og:image" content="https://prideofgypsiesfoundation.online//logo.jpeg">
+  <meta property="og:url" content="https://prideofgypsiesfoundation.online/">
+  <meta property="og:type" content="website">
+  
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Celebrity Meet & Greet Tickets">
+  <meta name="twitter:description" content="Exclusive celebrity experiences. Book your ticket now.">
+  <meta name="twitter:image" content="https://prideofgypsiesfoundation.online/m/logo.jpeg">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Meet The Stars</title>
@@ -728,5 +746,6 @@ function submitBooking(event) {
 
 </body>
 </html>
+
 
 
