--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  
+  <meta name="google-site-verification" content="Pk9IGZxyyvFLMAzXBN3G4vnxrZoNJWvxEd1EtbLXnfQ" />
   <!-- SEO Meta Tags -->
   <title>Celebrity Meet & Greet Tickets - Meet The Stars</title>
   <meta name="description" content="Exclusive celebrity meet & greet tickets. Connect with your favorite stars today! Limited spots available.">
@@ -746,6 +746,7 @@ function submitBooking(event) {
 
 </body>
 </html>
+
 
 
 
